--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,8 @@
 RewriteEngine on
 
 
-
-RewriteRule ^([a-z0-9-]+)$ 					index.php?pagina=$1 [NC]
+#
+RewriteRule ^([a-z0-9-]+)/?([a-z0-9-]+)?$ 					index.php?pagina=$1&id=$2 [NC]
 RewriteRule ^noticias/?([0-9]+)?$	 		index.php?pagina=noticias&noticia_id=$1 [NC]
 
 
